<resources>
    <string name="app_name">GardenProyect</string>
    <string name="web_client_id">979507455007-hvg9qfirlav8tafbgct1ofagkqofin3c.apps.googleusercontent.com</string>

    <string name="title_activity_jardinero">Jardinero</string>
    <string name="title_activity_cliente">Cliente</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title_jardinero">Daan Yael Valencia Alvarez</string>
    <string name="nav_header_title_cliente">Edwin Giovanni Vega Torres</string>
    <string name="nav_header_subtitle_jardinero">DaanValencia@gardenclean.mx</string>
    <string name="nav_header_subtitle_cliente">a17300435@ceti.mx</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_dinero_jardinero">Servicios pendientes</string>
    <string name="menu_dinero_cliente">Gastos</string>
    <string name="menu_help">Ayuda</string>
    <string name="menu_comment">Comentarios</string>

    <string name="menu_service_cliente">Servicio</string>
    <string name="menu_service_jardinero">Servicios</string>
    <string name="menu_service_jardineroTwo">Servicios</string>
    <string name="menu_calendar_jardinero">Calendario</string>
    <string name="menu_calendar_cliente">Calendario</string>
    <string name="menu_time_cliente">Horarios</string>
    <string name="menu_time_jardinero">Horario</string>

    <string name="menu_typeService_cliente">Tipo de servicio</string>
</resources>