<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_cliente"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_dinero_cliente"
            android:title="@string/menu_dinero_cliente" />
        <item
            android:id="@+id/nav_service_cliente"
            android:title="@string/menu_service_cliente"/>
        <item
            android:id="@+id/nav_calendar_cliente"
            android:title="@string/menu_calendar_cliente" />
        <item
            android:id="@+id/nav_time_cliente"
            android:title="@string/menu_time_cliente"/>
        <item
            android:id="@+id/nav_help"
            android:title="@string/menu_help" />
    </group>
</menu>