<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_jardinero"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_dinero_jardinero"
            android:title="@string/menu_dinero_jardinero" />
        <item
            android:id="@+id/nav_service_Jardinero"
            android:title="@string/menu_service_jardinero" />

     <!--   <item
            android:id="@+id/nav_calendar_jardinero"
            android:title="@string/menu_calendar_jardinero"
            />
        <item
            android:id="@+id/nav_time_jardinero"
            android:title="@string/menu_time_jardinero"/>
     -->

        <item
            android:id="@+id/nav_comment_Jardinero"
            android:title="@string/menu_comment" />
        <item
            android:id="@+id/nav_help"
            android:title="@string/menu_help" />

    </group>
</menu>